try to install packer using apt

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: go
 sudo: required
 dist: trusty
 
-before_install: 
-        - git clone https://github.com/hashicorp/packer.git
-        - cd packer && make dev
-        - packer
-
+addons:
+  apt:
+    update: true
+    packages:
+      - packer
 
