--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ language: go
 sudo: required
 dist: trusty
 
-addons:
-  apt:
-    update: true
-    packages:
-      - packer
+before_install:
+  - $(go env GOPATH)/src/github.com/hashicorp && \
+      cd $_ && \
+      git clone https://github.com/hashicorp/packer.git && \
+      cd packer && \
+      make dev
 
