--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,9 @@ sudo: required
 dist: trusty
 
 before_install:
-  - mkdir -p $(go env GOPATH)/src/github.com/hashicorp && \
-      cd $_ && \
-      git clone https://github.com/hashicorp/packer.git && \
-      cd packer && \
+  - mkdir -p $(go env GOPATH)/src/github.com/hashicorp && 
+      cd $_ && 
+      git clone https://github.com/hashicorp/packer.git && 
+      cd packer && 
       make dev
 
