--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,6 @@ before_install:
       cd packer &&
       make dev &&
       cd $TRAVIS_BUILD_DIR
-  - pip install boto3
+  - apt-get update
+  - apt-get install python3-pip
+  - pip3 install boto3
