--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_install:
       cd packer &&
       make dev &&
       cd $TRAVIS_BUILD_DIR
-  - apt-get update
-  - apt-get install python3-pip
+  - sudo apt-get update
+  - sudo apt-get install python3-pip
   - pip3 install boto3
