Install boto3 for the user to avoid permission errors

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
       cd $TRAVIS_BUILD_DIR
   - sudo apt-get update
   - sudo apt-get install python3-pip
-  - pip3 install boto3
+  - pip3 install boto3 --user
