--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ before_install:
       make dev &&
       cd $TRAVIS_BUILD_DIR
   - sudo apt-get update
-  - sudo apt-get install python3-pip
+  - sudo apt-get install date python3-pip
   - pip3 install awscli boto3 --user
