--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: go
 
 sudo: required
 dist: bionic
+go: master
 
 before_install:
   - mkdir -p $(go env GOPATH)/src/github.com/hashicorp &&
