--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ dist: bionic
 
 before_install:
   - sudo apt-get update
-  - sudo apt-get install python3-pip
+  - sudo apt-get install python3-pip python3-setuptools
   - pip3 install awscli boto3 --user
