--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ sudo: required
 dist: bionic
 
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install python3-pip python3-setuptools
+  - apt-get update
+  - apt-get install python3-pip python3-setuptools
   - pip3 install awscli boto3 --user
