--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,13 @@
-steps:
-- uses: actions/checkout@v2
-- uses: actions/setup-go@v2
-- run: go version
-- run: sudo apt-get update
-- run: sudo apt-get install python3-pip python3-setuptools
-- run: pip3 install awscli boto3 --user
-- run: make
-
+name: action
+on: [push]
+jobs:
+  make-amis:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v2
+      - run: go version
+      - run: sudo apt-get update
+      - run: sudo apt-get install python3-pip python3-setuptools
+      - run: pip3 install awscli boto3 --user
+      - run: make
